Scaffold remaing blocks, including EmailCapture for Netlify Contact Form

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,5 +1,14 @@
-import CTA from 'components/CTA';
+import Header from 'components/Header';
 import Hero from 'components/Hero';
+import Callout from 'components/Callout';
+import EmailCapture from 'components/EmailCapture';
+import Footer from 'components/Footer';
 
+<Header/>
 <Hero/>
-<CTA/>
+<Callout name="CalloutOne"/>
+<Callout name="CalloutTwo"/>
+<Callout name="CalloutThree"/>
+<Callout name="CalloutFour"/>
+<EmailCapture/>
+<Footer/>
