Big pass of clean up to make theme.css easier to work with

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,14 +1,14 @@
 import Header from 'components/Header';
 import Hero from 'components/Hero';
 import Callout from 'components/Callout';
-import EmailCapture from 'components/EmailCapture';
+import Conversion from 'components/Conversion';
 import Footer from 'components/Footer';
 
 <Header/>
 <Hero/>
-<Callout name="CalloutOne"/>
-<Callout name="CalloutTwo"/>
-<Callout name="CalloutThree"/>
-<Callout name="CalloutFour"/>
-<EmailCapture/>
+<Callout name="Callout1"/>
+<Callout name="Callout2"/>
+<Callout name="Callout3"/>
+<Callout name="Callout4"/>
+<Conversion/>
 <Footer/>
