--- a/src/pages/success.mdx
+++ b/src/pages/success.mdx
@@ -1,7 +1,7 @@
 import Header from 'components/Header';
-import EmailCaptureSuccess from 'components/EmailCaptureSuccess';
+import ConversionSuccess from 'components/ConversionSuccess';
 import Footer from 'components/Footer';
 
 <Header/>
-<EmailCaptureSuccess/>
+<ConversionSuccess/>
 <Footer/>
