Nume build (first pass)

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -10,5 +10,9 @@ import Footer from 'components/Footer';
 <Callout name="Callout2"/>
 <Callout name="Callout3"/>
 <Callout name="Callout4"/>
+<Callout name="Callout5"/>
+<Callout name="Callout6"/>
+<Callout name="Callout7"/>
+<Callout name="Callout8"/>
 <Conversion/>
 <Footer/>
