Bugfix: Inherit config for Conversion from `DEFAULTS < MD < MDX`

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -10,5 +10,5 @@ import Footer from 'components/Footer';
 <Callout name="Callout2"/>
 <Callout name="Callout3"/>
 <Callout name="Callout4"/>
-<Conversion/>
+<Conversion id="get-started"/>
 <Footer/>
