--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -8,7 +8,20 @@ import Footer from 'components/Footer';
 
 <Header/>
 <Hero/>
-<Callout name="Callout1"/>
+<Callout name="Callout1" config={{ wrap: false }}>
+<section>
+  <img src="/images/nume-kit.png" class="nume-kit" alt="nu me &mdash; Morning Munchies Power Powder 01" />
+</section>
+<section>
+
+### Healing nutrients for postpartum women,<br/>made easy.
+
+**nu me** is a morning powder blend, designed for better, faster postpartum recovery, based on ancient healing recipes from around the world.
+
+<Conversion id="availability" config={{ heading: null }}/>
+
+</section>
+</Callout>
 <Callout name="Callout2"/>
 <Callout name="Callout3"/>
 <Callout name="Callout4">
