Bugfix: No document in Gatsby SSR

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -68,43 +68,52 @@ import Footer from 'components/Footer';
     items={[
       {
         id: `why-do-i-need-this`,
-        heading: 'Why do I need this?',
-        content: `In cultures all around the world (from East Asia to Latin America and West Africa), the focus during the postpartum period is all around recovering the woman through care and nutrition, because people understood that helping the mother thrive is the first step to a healthy, happy baby. Much of this is a lost art in today’s culture, and women have remarkable rates of postpartum depression and anxiety, feelings of isolation, and helplessness. nu me is on a mission to help postpartum women by bringing centuries-old, tried & true ingredients, herbs, and spices to expedite healing and promote a successful long-term recovery, targeting the internal wound and physical exertion that a woman’s body encounters through birth as well as aid in breastfeeding.`,
+        heading: `Why do I need this?`,
+        content: `In cultures all around the world (from Asia to Latin America and Africa), the focus during the postpartum period is all around recovering the woman through care and nutrition, because people understood that helping the mother thrive is the first step to a healthy, happy baby.
+        Much of this is a lost art in today’s culture, and women have remarkable rates of postpartum depression and anxiety, feelings of isolation, and helplessness. Society prioritizes "snapping back in shape" and urging mothers to "do it all" without providing the tools or systems to properly support women.
+        The act of giving birth creates a plate-sized wound in our bodies, which needs repair.  Pregnancy and birth also transition many essentials of health from the mom to the baby, leaving mothers depleted.  This healing cannot be rushed and must be done intentionally.
+        nu me is on a mission to help postpartum women by bringing centuries-old, tried & true ingredients, herbs, and spices to expedite healing and promote a successful long-term recovery, targeting the internal wound and physical exertion that a woman’s body encounters through birth as well as aid in breastfeeding.  We formulated easy, convenient powders that you can prepare single-handedly with hot water to sip your way back into thriving health.`,
       },
       {
         id: `who-is-this-for`,
-        heading: 'Who is this for?',
-        content: `Made for all the powerful, incredible women who have given birth and want one less thing to worry (aka. their own nutrition & how to take care of themselves) about with a newborn.`,
+        heading: `Who is this for?`,
+        content: `Made for all the powerful, incredible women who have given birth and want one less thing to worry (aka. their own nutrition & how to take care of themselves) about with a newborn.
+        If you're giving birth soon (good luck!), this is for you - you'll thank yourself for preparing in advance when life feels all about the baby afterwards.
+        If you've JUST given birth (you hero, you), this is for you - your body needs to replenish lost nutrients and energy above and beyond a regular diet.  The 4th trimester concept doesn't only apply to the baby; the first 6 weeks are absolutely critical for your recovery and journey to long term health, preventing future ailments that can range from PPD to pelvic floor issues and migraines.
+        If you gave birth years ago, this is STILL for you - it's never too late to replenish and nourish our bodies.  You know that your body transformed after giving birth; this is a chance to transform it for the better.  Whether you look from a nutritional perspective (magenisum, iron, zinc, iodine, B vitamins, collagen, protein) or from an Eastern functional medicine point of view (heat, vata, energy, qi), your body can benefit from replenishing these lost essentials.`,
       },
       {
         id: `what-does-it-do`,
-        heading: 'What does it do?',
-        content: `TL;DR: Detoxes & depuffs. Heals & replenishes lost blood & nutrients. Rejuvenates & energizes. Prevents future long-term ailments and premature aging. Packed with quality, flash-frozen, powderized functional foods, Traditional Chinese Medicine herbs and Ayurvedic spices, nu me’s quintessential power powders are formulated through a deep understanding for ancient healing ingredients from around the world that have been used for thousands of years. Often, these ingredients are inaccessible or time-consuming to prepare, especially for a mother juggling a newborn. With modern food science, we’re able to tap into these ancient ingredients, combined with quality functional foods, to provide a nutrient-dense powder that can be prepared easily to promote a better recovery and long term healing for women.`,
+        heading: `What does it do?`,
+        content: `TL;DR: Detoxes & depuffs. Heals & replenishes lost blood & nutrients. Rejuvenates & energizes. Prevents future long-term ailments and premature aging.
+        Packed with quality, flash-frozen, powderized functional foods, Traditional Chinese Medicine herbs and Ayurvedic spices, nu me’s quintessential power powders are formulated through a deep understanding for ancient healing ingredients from around the world that have been used for thousands of years. Often, these ingredients are inaccessible or time-consuming to prepare, especially for a mother juggling a newborn. With modern food science, we’re able to tap into these ancient ingredients, combined with quality functional foods, to provide a nutrient-dense powder that can be prepared easily to promote a better recovery and long term healing for women.`,
       },
       {
         id: `when-do-i-take-it`,
-        heading: 'When do I take it?',
-        content: `Consider it your morning starter (to complement or replace breakfast) or an afternoon snack while grazing between feedings. nu me is designed to replace all those empty calories between meals, consumed out of exhaustion, boredom, or extreme hunger - we’ve been there!`,
+        heading: `When do I take it?`,
+        content: `Consider it your morning starter (to complement or replace breakfast) or an afternoon snack while grazing between feedings. nu me is designed to replace all those empty calories between meals, consumed out of exhaustion, boredom, or extreme hunger - we’ve been there!
+        Take it daily (& especially those first 40 days / 6 weeks) for best results.`,
       },
       {
         id: `how-do-i-take-it`,
-        heading: 'How do I take it?',
-        content: `Just add hot water - as easy as making a bowl of instant oatmeal!`,
+        heading: `How do I take it?`,
+        content: `Just add hot water - as easy as making a bowl of instant oatmeal or instant coffee!  The key is to *always* use hot water (or hot broth, if you're feeling fancy that day) because the body can digest nutrients best at warmer temperatures, and you'll be replenishing the heat and qi lost during birth. `,
       },
       {
         id: `where-can-i-get-it`,
-        heading: 'Where can I get it?',
-        content: `Find it online here or inquire with your holistic care provider to see if they are part of the nu me circle! Complete list of distributors to come!`,
+        heading: `Where can I get it?`,
+        content: `Find nu me online here or inquire with your holistic care provider to see if they are part of the nu me circle! Complete list of distributors throughout the US to come!`,
       },
       {
         id: `safe-for-me-amp-baby`,
-        heading: 'Safe for me &amp; Baby?',
-        content: `Abso-baby-lutely. The goal is to make sure we get your body the nutrients you uniquely need as well as the additional ones to pass onto the baby if you’re nursing. In fact, many of the active ingredients are tried & true remedies to aid in breastfeeding.`,
+        heading: `Safe for me &amp; Baby?`,
+        content: `Abso-baby-lutely.
+        The goal is to make sure we get your body the nutrients you uniquely need as well as the additional ones to pass onto the baby if you’re nursing. In fact, many of the active ingredients are tried & true remedies to aid in breastfeeding.`,
       },
       {
         id: `should-i-sign-up-for-early-access`,
-        heading: 'Should I sign up for early access?',
-        content: `Be the first to hear when we launch and have your input be a part of our potential beta testers - giving us feedback on designs and flavors.`,
+        heading: `Should I sign up for early access?`,
+        content: `We are constantly improving the formulas to meet more unique needs of our customers. Your unique story of health and birth will help us better customize the product for you.  Join our early access list to be the first to hear when we launch new products (a lot are coming!) and have your input be a part of our potential beta testers - giving us feedback on designs and flavors.`,
       },
     ]}
   />
