Hide Nu Me kit on mobile

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -10,7 +10,7 @@ import Footer from 'components/Footer';
 <Hero/>
 <Callout name="Callout1" config={{ wrap: false }}>
 <section>
-  <img src="/images/nume-kit.png" class="nume-kit" alt="nu me &mdash; Morning Munchies Power Powder 01" />
+  <img src="/images/nume-kit.png" class="nume-kit hidden--mobile" alt="nu me &mdash; Morning Munchies Power Powder 01" />
 </section>
 <section>
 
