Setup success page to be two column on desktop

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -67,6 +67,7 @@ import Footer from 'components/Footer';
     heading="Tell me more"
     items={[
       {
+        active: true,
         id: `why-do-i-need-this`,
         heading: `Why do I need this?`,
         content: `In cultures all around the world (from Asia to Latin America and Africa), the focus during the postpartum period is all around recovering the woman through care and nutrition, because people understood that helping the mother thrive is the first step to a healthy, happy baby.
