capitalization adjustment on "baby"

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -106,9 +106,9 @@ import Footer from 'components/Footer';
       },
       {
         id: `safe-for-me-amp-baby`,
-        heading: `Safe for me &amp; Baby?`,
+        heading: `Safe for me &amp; baby?`,
         content: `Abso-baby-lutely.
-        The goal is to make sure we get your body the nutrients you uniquely need as well as the additional ones to pass onto the baby if you’re nursing. In fact, many of the active ingredients are tried & true remedies to aid in breastfeeding.`,
+        The goal is to make sure we get your body the nutrients you uniquely need as well as the additional ones to pass onto the baby if you’re nursing. In fact, many of the active ingredients are tried & true remedies to aid in breastfeeding, used in cultures around the world for centuries on generations upon generations of mothers.`,
       },
       {
         id: `should-i-sign-up-for-early-access`,
