updated above the fold descriptive text

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -16,7 +16,7 @@ import Footer from 'components/Footer';
 
 ### Healing nutrients for postpartum women,<br/>made easy.
 
-**nu me** is a daily powder, easily mixed with hot water for better, faster postpartum recovery, based on ancient healing recipes from around the world.
+**nu me** is your quick mix, daily super food bowl, made in seconds with hot water. Based on centuries of herbal science to provide better, faster postpartum recovery.
 
 <Conversion id="availability" config={{ heading: null }}/>
 
@@ -79,15 +79,15 @@ import Footer from 'components/Footer';
         id: `who-is-this-for`,
         heading: `Who is this for?`,
         content: `Made for all the powerful, incredible women who have given birth and want one less thing to worry (aka. their own nutrition & how to take care of themselves) about with a newborn.
-        If you're giving birth soon (good luck!), this is for you - you'll thank yourself for preparing in advance when life feels all about the baby afterwards.
+        If you're giving birth soon (good luck!), this is for you - order in advance and set aside for when the baby comes home.  You'll thank yourself for preparing when life feels all about the baby afterwards.
         If you've JUST given birth (you hero, you), this is for you - your body needs to replenish lost nutrients and energy above and beyond a regular diet.  The 4th trimester concept doesn't only apply to the baby; the first 6 weeks are absolutely critical for your recovery and journey to long term health, preventing future ailments that can range from PPD to pelvic floor issues and migraines.
         If you gave birth years ago, this is STILL for you - it's never too late to replenish and nourish our bodies.  You know that your body transformed after giving birth; this is a chance to transform it for the better.  Whether you look from a nutritional perspective (magenisum, iron, zinc, iodine, B vitamins, collagen, protein) or from an Eastern functional medicine point of view (heat, vata, energy, qi), your body can benefit from replenishing these lost essentials.`,
       },
       {
         id: `what-does-it-do`,
         heading: `What does it do?`,
-        content: `TL;DR: Detoxes & depuffs. Heals & replenishes lost blood & nutrients. Rejuvenates & energizes. Prevents future long-term ailments and premature aging.
-        Packed with quality, flash-frozen, powderized functional foods, Traditional Chinese Medicine herbs and Ayurvedic spices, nu me’s quintessential power powders are formulated through a deep understanding for ancient healing ingredients from around the world that have been used for thousands of years. Often, these ingredients are inaccessible or time-consuming to prepare, especially for a mother juggling a newborn. With modern food science, we’re able to tap into these ancient ingredients, combined with quality functional foods, to provide a nutrient-dense powder that can be prepared easily to promote a better recovery and long term healing for women.`,
+        content: `Detoxes & depuffs. Heals & replenishes lost blood & nutrients. Rejuvenates & energizes. Prevents future long-term ailments and premature aging.
+        Packed with quality, flash-frozen, powderized functional foods, Traditional Chinese Medicine herbs and Ayurvedic spices, nu me’s quintessential power powders are formulated through a deep understanding for ancient healing ingredients from around the world that have been used for thousands of years. Often, these ingredients are inaccessible or time-consuming to prepare, especially for a mother juggling a newborn. With modern food science, we’re able to tap into these ancient ingredients, combined with quality functional foods, to provide a nutrient-dense powder that can be prepared instantly into a super food bowl to promote a better recovery and long term healing for women.`,
       },
       {
         id: `when-do-i-take-it`,
