--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,15 +1,14 @@
 import Header from 'components/Header';
-import DrawingSurface from 'components/DrawingSurface';
+import Easel from 'components/Easel';
 import Hero from 'components/Hero';
 import Callout from 'components/Callout';
 import Conversion from 'components/Conversion';
 import Footer from 'components/Footer';
 
-<DrawingSurface/>
+<Easel/>
 <Callout name="Callout1"/>
 <Callout name="Callout2"/>
 <Callout name="Callout3"/>
-<Callout name="Callout4"/>
 <Conversion id="get-started"/>
 <Footer/>
 
