--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -93,7 +93,7 @@ import Footer from 'components/Footer';
         id: `when-do-i-take-it`,
         heading: `When do I take it?`,
         content: `Consider it your morning starter (to complement or replace breakfast) or an afternoon snack while grazing between feedings. nu me is designed to replace all those empty calories between meals, consumed out of exhaustion, boredom, or extreme hunger - we’ve been there!
-        Take it daily (& especially those first 40 days / 6 weeks) for best results.`,
+        Take it daily after giving birth (& especially those first 40 days / 6 weeks) for best results.`,
       },
       {
         id: `how-do-i-take-it`,
