Back to working after meaningful clean up

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -5,6 +5,7 @@ import Callout from 'components/Callout';
 import Conversion from 'components/Conversion';
 import Footer from 'components/Footer';
 
+<Header/>
 <Easel/>
 <Callout name="Callout1"/>
 <Callout name="Callout2"/>
