Another pass at theming

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -8,7 +8,26 @@ import Footer from 'components/Footer';
 <Header/>
 <Easel/>
 <Callout name="Callout1"/>
-<Callout name="Callout2"/>
+<Callout name="Callout2">
+  <section>
+
+### Give the gift of modern art
+
+Live and on-demand classes delivered by trained instructors
+
+Real-time feedback
+
+1-on-1 and group instruction
+
+Download, share and print your childrens’  artwork
+
+All ages and skill levels
+
+</section>
+<section>
+  <Conversion id="availability" config={{ heading: null }}/>
+  </section>
+</Callout>
 <Callout name="Callout3"/>
 <Conversion id="get-started"/>
 <Footer/>
