Style Success view

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -38,7 +38,12 @@ All ages and skill levels
 </section>
 </Callout>
 <Callout name="Callout3"/>
-<Conversion id="get-started"/>
+<Conversion id="get-started">
+  <p>Help your child make beautiful things</p>
+<p></p>
+  <p>Earn 50% off by joining the waitlist</p>
+
+</Conversion>
 <section>
   <img src="/images/easel-in-place.png" width="100%" />
 </section>
