--- a/src/pages/success.mdx
+++ b/src/pages/success.mdx
@@ -1,7 +1,9 @@
 import Header from 'components/Header';
+import EaselPrototype from 'components/EaselPrototype';
 import ConversionSuccess from 'components/ConversionSuccess';
 import Footer from 'components/Footer';
 
 <Header/>
 <ConversionSuccess/>
+<EaselPrototype/>
 <Footer/>
