--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -14,9 +14,11 @@ import Footer from 'components/Footer';
 </section>
 <section>
 
-### Healing nutrients for postpartum women,<br/>made easy.
+### Finally, a protein shake that tastes great.
 
-**nu me** is your daily superfood nourishing broth, made in seconds with hot water. Based on centuries of herbal science to provide better, faster postpartum recovery.
+Effortless way to get your daily dose of fruit and protein. High quality ingredients, no mess, no fuss.
+
+Just shake, twist, and enjoy.
 
 <Conversion id="availability" config={{ heading: null }}/>
 
