--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,3 +1,4 @@
+import InstagramEmbed from 'react-instagram-embed'
 import Header from 'components/Header';
 import Hero from 'components/Hero';
 import Callout from 'components/Callout';
@@ -8,118 +9,133 @@ import Footer from 'components/Footer';
 
 <Header/>
 <Hero/>
-<Callout name="Callout1" config={{ wrap: false }}>
-<section>
-  <img src="/images/nume-kit.png" class="nume-kit hidden--mobile" alt="nu me &mdash; Morning Munchies Power Powder 01" />
-</section>
-<section>
-
-### Finally, a protein shake that tastes great.
-
-Effortless way to get your daily dose of fruit and protein. High quality ingredients, no mess, no fuss.
-
-Just shake, twist, and enjoy.
-
-<Conversion id="availability" config={{ heading: null }}/>
-
-</section>
-</Callout>
-<Callout name="Callout2"/>
-<Callout name="Callout3"/>
-<Callout name="Callout4">
-  <BadgeList badges={[
+<Callout name="Callout1"/>
+<Callout name="Callout2">
+  <BadgeList layout="four" badges={[
     {
-      id:"detox",
-      label: "Debloat &amp; Detox",
-      icon: '/images/icon-detox.svg',
+      id:"backed-by-science",
+      label: "Backed by Science",
+      icon: '/images/icon-science.png',
     },
     {
-      id:"joints",
-      label: "Protect Joints",
-      icon: '/images/icon-digestion.svg',
+      id:"physician-created",
+      label: "Physician Created",
+      icon: '/images/icon-physicians.png',
     },
     {
-      id:"collagen",
-      label: "Build Collagen",
-      icon: '/images/icon-healing.svg',
+      id:"high-protein",
+      label: "High Protein",
+      icon: '/images/icon-high-protein.png',
     },
     {
-      id:"digestion",
-      label: "Easily Digest",
-      icon: '/images/icon-joints.svg',
+      id:"antioxidents",
+      label: "Antioxident & Nutrient Rich",
+      icon: '/images/icon-antioxidants.png',
     },
     {
-      id:"nutrients",
-      label: "Replenish Iron &amp; Nutrients",
-      icon: '/images/icon-nutrients.svg',
+      id:"no-added-sugar",
+      label: "No Added Sugar",
+      icon: '/images/icon-no-sugar.png',
     },
     {
-      id:"rejuvenate",
-      label: "Engergize &amp; Rejuvenate",
-      icon: '/images/icon-rejuvenate.svg',
+      id:"soy-free",
+      label: "Soy Free",
+      icon: '/images/icon-no-soy.png',
+    },
+    {
+      id:"gluten-free",
+      label: "Gluten Free",
+      icon: '/images/icon-gluten-free.png',
+    },
+    {
+      id:"non-gmo",
+      label: "Non-GMO",
+      icon: '/images/icon-non-gmo.png',
     },
   ]}/>
 </Callout>
-<Callout name="Callout5"/>
-<Callout name="Callout6"/>
-<Callout name="Callout7"/>
-<Callout name="Callout8">
+<Callout name="Callout3"/>
+<Callout name="Callout4" id="smoothies">
+  <section>
   <Accordion
-    id="tell-me-more"
-    heading="Tell me more"
+    id="smoothie-flavors"
+    heading="Smoothie Flavors"
     items={[
       {
         active: true,
-        id: `why-do-i-need-this`,
-        heading: `Why do I need this?`,
-        content: `In cultures all around the world (from Asia to Latin America and Africa), the focus during the postpartum period is all around recovering the woman through care and nutrition, because people understood that helping the mother thrive is the first step to a healthy, happy baby.
-        Much of this is a lost art in today’s culture, and women have remarkable rates of postpartum depression and anxiety, feelings of isolation, and helplessness. Society prioritizes "snapping back in shape" and urging mothers to "do it all" without providing the tools or systems to properly support women.
-        The act of giving birth creates a plate-sized wound in our bodies, which needs repair.  Pregnancy and birth also transition many essentials of health from the mom to the baby, leaving mothers depleted.  This healing cannot be rushed and must be done intentionally.
-        nu me is on a mission to help postpartum women by bringing centuries-old, tried & true ingredients, herbs, and spices to expedite healing and promote a successful long-term recovery, targeting the internal wound and physical exertion that a woman’s body encounters through birth as well as aid in breastfeeding.  We formulated easy, convenient powdered broths that you can prepare single-handedly with hot water to sip your way back into thriving health.`,
+        id: `banana-strawberry`,
+        heading: `Banana Strawberry`,
+        content: `Succulent strawberries combine with the sweet, firmness of bananas in a flavorful, energy-boosting blend.
+Ingredients: Strawberry, Banana, Plant Protein, Apple, Pineapple
+No added sugar. No artificial anything.
+`,
       },
       {
-        id: `who-is-this-for`,
-        heading: `Who is this for?`,
-        content: `Made for all the powerful, incredible women who have given birth and want one less thing to worry (aka. their own nutrition & how to take care of themselves) about with a newborn.
-        If you're giving birth soon (good luck!), this is for you - order in advance and set aside for when the baby comes home.  You'll thank yourself for preparing when life feels all about the baby afterwards.
-        If you've JUST given birth (you hero, you), this is for you - your body needs to replenish lost nutrients and energy above and beyond a regular diet.  The 4th trimester concept doesn't only apply to the baby; the first 6 weeks are absolutely critical for your recovery and journey to long term health, preventing future ailments that can range from PPD to pelvic floor issues and migraines.
-        If you gave birth years ago, this is STILL for you - it's never too late to replenish and nourish our bodies.  You know that your body transformed after giving birth; this is a chance to transform it for the better.  Whether you look from a nutritional perspective (magenisum, iron, zinc, iodine, B vitamins, collagen, protein) or from an Eastern functional medicine point of view (heat, vata, energy, qi), your body can benefit from replenishing these lost essentials.`,
+        id: `mango-pineapple`,
+        heading: `Mango Pineapple`,
+        content: `Exotic blend of mango and pineapple take your taste buds on a tour of the tropics. Heart healthy, antioxidant packed, and delicious.
+Ingredients: Mango, Pineapple, Plant Protein, Apple, Banana, Passion Fruit
+No added sugar. No artificial anything.`,
       },
       {
-        id: `what-does-it-do`,
-        heading: `What does it do?`,
-        content: `Detoxes & depuffs. Heals & replenishes lost blood & nutrients. Rejuvenates & energizes. Prevents future long-term ailments and premature aging.
-        Packed with quality, flash-frozen, powderized functional foods (like sprouted amaranth, apricot, apples) Traditional Chinese Medicine herbs (Angelica sinensi, Eucommia ulmoides) and Ayurvedic spices (Ajwain seeds, Tumeric), nu me’s quintessential power powders are formulated through a deep understanding for ancient healing ingredients from around the world that have been used for thousands of years. Often, these ingredients are inaccessible or time-consuming to prepare, especially for a mother juggling a newborn. With modern food science, we’re able to tap into these ancient ingredients, combined with quality functional foods, to provide a nutrient-dense powder that can be prepared instantly into a super food bowl to promote a better recovery and long term healing for women.`,
+        id: `cherry-acaio`,
+        heading: `Cherry Acai`,
+        content: `The acai has the greatest antioxidant power of the super fruits and is packed with vitamins and essential fats. Its benefits are supercharged once combined with cherry and other fruits.
+Ingredients: Cherry, Acai, Plant Protein, Banana, Apple, Lemon
+No added sugar. No artificial anything.`,
       },
       {
-        id: `when-do-i-take-it`,
-        heading: `When do I take it?`,
-        content: `Consider it your morning starter (to complement or replace breakfast) or an afternoon snack while grazing between feedings. nu me is designed to replace all those empty calories between meals, consumed out of exhaustion, boredom, or extreme hunger - we’ve been there!
-        Take it daily after giving birth (& especially those first 40 days / 6 weeks) for best results.`,
-      },
-      {
-        id: `how-do-i-take-it`,
-        heading: `How do I take it?`,
-        content: `Just add hot water - as easy as making a bowl of instant oatmeal or instant coffee!  The key is to *always* use hot water (or hot broth, if you're feeling fancy that day) because the body can digest nutrients best at warmer temperatures, and you'll be replenishing the heat and qi lost during birth. `,
-      },
-      {
-        id: `where-can-i-get-it`,
-        heading: `Where can I get it?`,
-        content: `Find nu me online here or inquire with your holistic care provider to see if they are part of the nu me circle! Complete list of distributors throughout the US to come!`,
-      },
-      {
-        id: `safe-for-me-amp-baby`,
-        heading: `Safe for me &amp; baby?`,
-        content: `Abso-baby-lutely.
-        The goal is to make sure we get your body the nutrients you uniquely need as well as the additional ones to pass onto the baby if you’re nursing. In fact, many of the active ingredients are tried & true remedies to aid in breastfeeding, used in cultures around the world for centuries on generations upon generations of mothers.`,
-      },
-      {
-        id: `should-i-sign-up-for-early-access`,
-        heading: `Should I sign up for early access?`,
-        content: `We are constantly improving the formulas to meet more unique needs of our customers. Your unique story of health and birth will help us better customize the product for you.  Join our early access list to be the first to hear when we launch new products (a lot are coming!) and have your input be a part of our potential beta testers - giving us feedback on designs and flavors.`,
+        id: `chocolate-banana`,
+        heading: `Chocolate Banana`,
+        content: `Guilt-free, rich & velvety chocolate with a hint of creamy banana.
+Ingredients: Banana, Plant Protein, Cocoa Powder
+No added sugar. No artificial anything.`,
       },
     ]}
   />
+  </section>
+  <section className={'flavor-art'}>
+    <img src="/images/nymbl-flavors.png" alt="Smoothie Flavors" />
+  </section>
 </Callout>
-<Conversion id="get-started"/>
+<Callout name="Callout5" id="our-story"/>
+<Callout name="Callout6">
+  <InstagramEmbed
+    url='https://www.instagram.com/p/CBRvCVYAWDX/'
+    maxWidth={320}
+    hideCaption={true}
+    containerTagName='div'
+    injectScript
+    protocol=''
+    className={"ig-embed"}
+  />
+  <InstagramEmbed
+    url='https://www.instagram.com/p/CBlUUT_J3yX/'
+    maxWidth={320}
+    hideCaption={true}
+    containerTagName='div'
+    injectScript
+    protocol=''
+    className={"ig-embed"}
+  />
+  <InstagramEmbed
+    url='https://www.instagram.com/p/CBlNQjHpWGM/'
+    maxWidth={320}
+    hideCaption={true}
+    containerTagName='div'
+    injectScript
+    protocol=''
+    className={"ig-embed hidden--mobile"}
+  />
+  <InstagramEmbed
+    url='https://www.instagram.com/p/CBlUY7wp37m/'
+    maxWidth={320}
+    hideCaption={true}
+    containerTagName='div'
+    injectScript
+    protocol=''
+    className={"ig-embed hidden--mobile"}
+  />
+</Callout>
+<Conversion id="try-it"/>
 <Footer/>
