Update flavors section w gif

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -95,7 +95,7 @@ No added sugar. No artificial anything.`,
   />
   </section>
   <section className={'flavor-art'}>
-    <img src="/images/nymbl-flavors.png" alt="Smoothie Flavors" />
+    <img src="/images/bottles.gif" alt="Smoothie Flavors" />
   </section>
 </Callout>
 <Callout name="Callout5" id="our-story"/>
