Update copy per feedback from Mike

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -39,7 +39,12 @@ All ages and skill levels
 </Callout>
 <Callout name="Callout3"/>
 <Conversion id="get-started">
-  <p>Earn 50% off by joining the waitlist</p>
+
+  A digital canvas and online community for creating art
+
+  Get live feedback on your digital creations from certified instructors
+
+  Earn 50% off by joining the waitlist today
 
 </Conversion>
 <section>
