Swap rendered photo with the shorty!

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -48,7 +48,7 @@ All ages and skill levels
 
 </Conversion>
 <section>
-  <img src="/images/easel-in-place.png" width="100%" />
+  <img src="/images/easel-in-place.jpg" width="100%" />
 </section>
 <Footer/>
 
