Update type for Conversion heading

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -40,7 +40,7 @@ All ages and skill levels
 <Callout name="Callout3"/>
 <Conversion id="get-started">
 
-  A digital canvas and online community for creating art
+  ### A digital canvas & <br/> online community for creating art
 
   Get live feedback on your digital creations from certified instructors
 
