Fix typo with id

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -78,7 +78,7 @@ Ingredients: Mango, Pineapple, Plant Protein, Apple, Banana, Passion Fruit
 No added sugar. No artificial anything.`,
       },
       {
-        id: `cherry-acaio`,
+        id: `cherry-acai`,
         heading: `Cherry Acai`,
         content: `The acai has the greatest antioxidant power of the super fruits and is packed with vitamins and essential fats. Its benefits are supercharged once combined with cherry and other fruits.
 Ingredients: Cherry, Acai, Plant Protein, Banana, Apple, Lemon
