Added Playground destination, updated copy everywhere to read The Easel and other feedback from this doc:
https://docs.google.com/document/d/147mqcyAbxr1a6SnFG5c6I92no8dPme2lgCqm0PnXAsE/edit

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -6,7 +6,9 @@ import Callout from 'components/Callout';
 import Conversion from 'components/Conversion';
 import Footer from 'components/Footer';
 
-<Header/>
+<Header>
+  <p>Help your child make beautiful things</p>
+</Header>
 <Easel/>
 <Callout name="Callout1">
   <section>
@@ -41,8 +43,6 @@ All ages and skill levels
 <Conversion id="get-started">
 
   ### A digital canvas & <br/> online community for creating art
-
-  Get live feedback on your digital creations from certified instructors
 
   Earn 50% off by joining the waitlist today
 
