Add image to test page

--- a/src/pages/test.mdx
+++ b/src/pages/test.mdx
@@ -12,3 +12,5 @@ This should be a new paragraph
 1. item
 2. item 
 3. item
+
+![Alt Text](https://github.com/WildKidco/web-landing-scaffold/raw/master/static/images/site.png)
