Add a fifth callout and clean up index.mdx a bit so it's easier to work with.

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -7,49 +7,44 @@ import Conversion from 'components/Conversion';
 import Footer from 'components/Footer';
 
 <Header>
-  <p>Help your child make beautiful things</p>
-</Header>
-<Easel/>
-<Callout name="Callout1">
-  <section>
 
-## Introducing The Easel
+Help your child make beautiful things
+
+</Header>
+
+<Easel/>
+
+<Callout name="Callout1">
+
+<section>
+
+### Introducing The Easel
 
 <EaselPrototype/>
 
-  </section>
+</section>
+
 </Callout>
+
 <Callout name="Callout2">
-  <section>
 
-### Give the gift of modern art
-
-Live and on-demand classes delivered by trained instructors
-
-Real-time feedback
-
-1-on-1 and group instruction
-
-Download, share and print your childrens’  artwork
-
-All ages and skill levels
-
-</section>
-<section>
-  <Conversion id="availability" config={{ heading: null }}/>
-</section>
 </Callout>
-<Callout name="Callout3"/>
+
+<Callout name="Callout3">
+
+</Callout>
+
 <Conversion id="get-started">
 
-  ### A digital canvas & <br/> online community for creating art
+### A digital canvas & <br/> online community for creating art
 
-  Earn 50% off by joining the waitlist today
+Earn 50% off by joining the waitlist today
 
 </Conversion>
-<section>
-  <img src="/images/easel-in-place.jpg" width="100%" />
-</section>
+
+<Callout name="Callout4"></Callout>
+<Callout name="Callout5"></Callout>
+
 <Footer/>
 
 
